#12 global refactoring and updates, add OrderDetailsEntity to OrderEntity, also added ManualEntity instead of ManualProjection and bad native queries
